--- a/package.yml
+++ b/package.yml
@@ -18,7 +18,7 @@ repository:
   type: git
   url: https://github.com/zurborg/transformator.git
 dependencies:
-  condvar: >=0.0.5
+  cvar: >=1.0.0
   jade: >=1.7.0
   cbor: >=0.3.0
   minify: >=1.3.0
